
package mysql;

message tb_npc_skill{
    required uint32 id = 1;
    required uint32 npc_id = 2;
    required uint32 skill_id = 3;
    required uint32 skill_level = 4;
    required uint32 skill_grid_index = 5;
    required uint32 studied = 6;
    required string created_date = 7;
    required string last_modified_date = 8;
    required uint32 status = 9;
    required string remark = 10;
}
